--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -4,16 +4,16 @@
 
     max-width: 100%;
     max-height: 100vh;
+    overflow-y: hidden;
   }
   .overlay {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.603);
+    background: rgba(0, 0, 0, 0.703);
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+    z-index: 10;
    
   }
 
@@ -29,6 +29,7 @@
   .home-content {
     position: relative;
     width: 100%;
+    height: 100vh;
     margin: 0 auto;
     top: 100px;
     color: #fff;
@@ -74,17 +75,6 @@
     /* visibility:hidden; */
     
   }
-
-
-
- 
-  .home-content .middle-line {
-    height: 0px;
-    width: 2px;
-    background: #fff;
-    margin: 10px auto;
-    position: relative;
-  }
   
   .home-content img {
     width: 75px;
@@ -105,6 +95,7 @@
     position: relative;
     margin-top: 30px;
     width: 250px;
+    z-index: 100;
 }
 @media (min-width: 640px) and (orientation: portrait){
   img.team-logo{width: 270px;}
