--- a/src/style/Navigation.css
+++ b/src/style/Navigation.css
@@ -10,6 +10,7 @@ nav{
     background-color:#222;
 }
 
+
 .active{
 color: gold;
 
@@ -34,6 +35,9 @@ nav a {
     margin: 0 15px;
     transition: .3s;
     
+  }
+  @media (min-width: 1024px){
+    nav a{font-size: 30px;}
   }
   nav a:hover{
   color: gold;
