--- a/src/style/About.css
+++ b/src/style/About.css
@@ -1,6 +1,11 @@
-
+.courtine{
+width: 100%;
+height: 100vh;
+background-color:#0D0D0D;
+}
 
 .about{
+    
     font-family: Playfair Display, sans-serif;
     background-color: #F2F2F2;
     display: flex;
